--- a/VirtualTourtist/Assets/Base.lproj/Main.storyboard
+++ b/VirtualTourtist/Assets/Base.lproj/Main.storyboard
@@ -58,19 +58,33 @@
                                 <rect key="frame" x="0.0" y="251" width="375" height="416"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="r7u-Gb-aGh">
-                                    <size key="itemSize" width="50" height="50"/>
+                                    <size key="itemSize" width="115" height="115"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="dhb-3A-DmL">
-                                        <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CollectionCell" id="dhb-3A-DmL" customClass="CollectionCellVC" customModule="VirtualTourtist" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="50" height="50"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PlD-e7-ZzK">
+                                                    <rect key="frame" x="0.0" y="0.0" width="115" height="115"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
+                                        <constraints>
+                                            <constraint firstAttribute="bottom" secondItem="PlD-e7-ZzK" secondAttribute="bottom" id="1Fd-d7-eL2"/>
+                                            <constraint firstAttribute="trailing" secondItem="PlD-e7-ZzK" secondAttribute="trailing" id="SG1-6d-41U"/>
+                                            <constraint firstItem="PlD-e7-ZzK" firstAttribute="top" secondItem="dhb-3A-DmL" secondAttribute="top" id="enO-Yw-BRv"/>
+                                            <constraint firstItem="PlD-e7-ZzK" firstAttribute="leading" secondItem="dhb-3A-DmL" secondAttribute="leading" id="xXy-MY-Amq"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="collectionImage" destination="PlD-e7-ZzK" id="9lS-Jm-ixp"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
