--- a/VirtualTourtist/Assets/Base.lproj/Main.storyboard
+++ b/VirtualTourtist/Assets/Base.lproj/Main.storyboard
@@ -49,13 +49,13 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="76s-Mo-aCU">
-                                <rect key="frame" x="0.0" y="53" width="375" height="197"/>
+                                <rect key="frame" x="0.0" y="53" width="375" height="139"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="197" id="nus-pQ-zOa"/>
+                                    <constraint firstAttribute="height" constant="139" id="nus-pQ-zOa"/>
                                 </constraints>
                             </mapView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="wvu-Mu-i17">
-                                <rect key="frame" x="0.0" y="251" width="375" height="416"/>
+                                <rect key="frame" x="0.0" y="192" width="375" height="418"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="r7u-Gb-aGh">
                                     <size key="itemSize" width="115" height="115"/>
@@ -88,30 +88,38 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PCn-jJ-oce">
-                                <rect key="frame" x="56" y="75" width="240" height="318"/>
-                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vUv-bw-e2Z">
+                                <rect key="frame" x="117.5" y="618" width="140" height="30"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="140" id="Yrl-EM-dxw"/>
+                                </constraints>
+                                <state key="normal" title="New Collection">
+                                    <color key="titleShadowColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="newCollectionButtonTapped:" destination="kw3-h0-CfJ" eventType="touchUpInside" id="lK7-HY-xH7"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstItem="PCn-jJ-oce" firstAttribute="leading" secondItem="0P2-eh-rUZ" secondAttribute="leading" constant="56" id="1H7-9R-dvu"/>
                             <constraint firstItem="76s-Mo-aCU" firstAttribute="trailing" secondItem="0P2-eh-rUZ" secondAttribute="trailing" id="2Tg-qT-ZBq"/>
                             <constraint firstItem="76s-Mo-aCU" firstAttribute="top" secondItem="bTe-uV-meM" secondAttribute="top" constant="53" id="BhW-GC-2T6"/>
-                            <constraint firstItem="wvu-Mu-i17" firstAttribute="bottom" secondItem="0P2-eh-rUZ" secondAttribute="bottom" id="ENS-La-vVF"/>
+                            <constraint firstItem="wvu-Mu-i17" firstAttribute="bottom" secondItem="0P2-eh-rUZ" secondAttribute="bottom" constant="-57" id="ENS-La-vVF"/>
                             <constraint firstItem="wvu-Mu-i17" firstAttribute="leading" secondItem="0P2-eh-rUZ" secondAttribute="leading" id="FYU-Zn-AvT"/>
-                            <constraint firstItem="0P2-eh-rUZ" firstAttribute="trailing" secondItem="PCn-jJ-oce" secondAttribute="trailing" constant="79" id="McN-Le-dd7"/>
                             <constraint firstItem="wvu-Mu-i17" firstAttribute="trailing" secondItem="0P2-eh-rUZ" secondAttribute="trailing" id="Shq-Lb-4RG"/>
-                            <constraint firstItem="wvu-Mu-i17" firstAttribute="top" secondItem="76s-Mo-aCU" secondAttribute="bottom" constant="1" id="nTJ-QC-tqU"/>
-                            <constraint firstItem="PCn-jJ-oce" firstAttribute="top" secondItem="0P2-eh-rUZ" secondAttribute="top" constant="55" id="ucZ-Rw-Mbk"/>
+                            <constraint firstItem="wvu-Mu-i17" firstAttribute="top" secondItem="76s-Mo-aCU" secondAttribute="bottom" id="nTJ-QC-tqU"/>
+                            <constraint firstItem="vUv-bw-e2Z" firstAttribute="centerX" secondItem="bTe-uV-meM" secondAttribute="centerX" id="r9g-fK-2gx"/>
+                            <constraint firstItem="0P2-eh-rUZ" firstAttribute="bottom" secondItem="vUv-bw-e2Z" secondAttribute="bottom" constant="19" id="v15-Al-0Kz"/>
                             <constraint firstItem="76s-Mo-aCU" firstAttribute="leading" secondItem="0P2-eh-rUZ" secondAttribute="leading" id="vq7-kA-feA"/>
-                            <constraint firstItem="0P2-eh-rUZ" firstAttribute="bottom" secondItem="PCn-jJ-oce" secondAttribute="bottom" constant="274" id="zbX-Es-Y57"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="0P2-eh-rUZ"/>
                     </view>
                     <connections>
                         <outlet property="collectionView" destination="wvu-Mu-i17" id="Nrx-wb-F3R"/>
                         <outlet property="mapView" destination="76s-Mo-aCU" id="zjA-vx-tPI"/>
-                        <outlet property="testImage" destination="PCn-jJ-oce" id="8uH-nq-sB0"/>
+                        <outlet property="newCollectionButton" destination="vUv-bw-e2Z" id="cBp-pN-Ujb"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WH8-rD-zgY" userLabel="First Responder" sceneMemberID="firstResponder"/>
